Adds T6